--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,49 @@ main strong {
   margin-right: 20px;
   line-height: 1.8;
 }
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 16px;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 16px;
+  align-items: center;
+  justify-content: center;
+}
+
+.project img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  border: 1px solid #2d2d2d;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.project img:hover {
+  transform: translateY(-5px); /* Lift the div slightly */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Add a box shadow */
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+}
+
+.project a {
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.project p {
+  text-align: center;
+}
+
+.project-name {
+  font-weight: bold;
+}
