--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,21 @@ main strong {
 .resume-download {
   padding: 10px;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 70%;
+}
+
+form input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #2d2d2d;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
