--- a/styles.css
+++ b/styles.css
@@ -73,13 +73,18 @@ main strong {
   height: 2.5rem;
 }
 .about-image img {
-  width: 30%;
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%; /* Makes the image a circle */
+  margin: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
+  transition: transform 0.3s ease; /* Adds a smooth hover effect */
 }
-
 .about {
   display: flex;
+  max-width: 80%;
+  height: auto;
   align-items: center;
-  padding: 20px;
   background-color: #f8f8f8;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -87,9 +92,9 @@ main strong {
 
 .about-text {
   flex: 1;
-  min-width: 50%;
-  margin-right: 20px;
-  line-height: 1.8;
+  min-width: 80%;
+  text-align: center;
+  font-size: 18px;
 }
 
 .projects-grid {
